classDiagram
    class RepairPart {
        +device: ForeignKey~Device~
        +part: ForeignKey~Part~
        +technician: ForeignKey~User~
        +quantity: IntegerField
        +installed_at: DateTimeField
        +notes: TextField
    }
    RepairPart "1" --> "1" Device
    RepairPart "1" --> "1" Part
    RepairPart "1" --> "1" User